# subsmelt

./: .dockerignore  .gitignore  Dockerfile  README.md  SUB_SMELT_IMPROVEMENT_PLAN.md  docker-compose.whisper.gpu.yml  docker-compose.whisper.yml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.dev-alt.config.ts
backend-whisper/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-diarization.txt  requirements-url.txt  requirements.txt  run_server.py
backend-whisper/app/: audio.py  diarize.py  fetch_url.py  formatters.py  gpu.py  main.py  model_cache.py  model_loader.py  model_manager.py  paths.py  preflight.py  provision.py  schemas.py  segments.py  transcribe.py  version.py
backend-whisper/packaging/windows/: README.md  build-local.bat  build-local.ps1  fetch-vendor.ps1  install-service.ps1  installer.iss  run-built-server.bat  run-gui.bat  run-tray.bat  uninstall-service.ps1  whisper-gui.spec  whisper-server.spec  (+1 more)
backend-whisper/scripts/: backend-whisper.spec  build-windows.ps1  install.bat  installer.iss  uninstall.bat
backend-whisper/subsmelt_whisper/: __init__.py  auth.py  cli.py  config.py  main.py
backend-whisper/tests/: test_advanced_options.py  test_audio.py  test_auth.py  test_diarize.py  test_fetch_url.py  test_formatters.py  test_gpu.py  test_model_cache.py  test_model_download.py  test_model_loader.py  test_model_repos.py  test_models.py  test_preflight.py  test_provision.py  test_segments.py  test_streaming.py  test_task_store.py  test_upload.py  test_version.py  test_writer.py
(+156 files in other folders)
